<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="ButtonPlusText">+</string>
    <string name="Button7Text">7</string>
    <string name="Button8Text">8</string>
    <string name="Button9Text">9</string>
    <string name="Button4Text">4</string>
    <string name="Button5Text">5</string>
    <string name="Button6Text">6</string>
    <string name="Button1Text">1</string>
    <string name="Button2Text">2</string>
    <string name="Button3Text">3</string>
    <string name="Button0Text">0</string>
    <string name="ButtonEqualText">=</string>
    <string name="ButtonMinusText">-</string>
    <string name="ButtonMultiplyText">*</string>
    <string name="ButtonDivisionText">/</string>
    <string name="ButtonDotText">,</string>
    <string name="ButtonCancelText">С</string>
</resources>
